# vitasdk-rust

./: .gitmodules  Cargo.toml  arm-vita-eabi.json  vitasdk.json
.cargo/: config.toml
cargo-vitasdk/: Cargo.toml
cargo-vitasdk/src/: lib.rs  main.rs  toolchain.rs
samples/delay/: Cargo.toml
samples/delay/src/: main.rs
src/: lib.rs  main.rs  toolchain.rs
vitasdk/: .gitignore  Cargo.toml  build.rs  fetch.sh
vitasdk-sys/: Cargo.toml  build.rs
vitasdk-sys/build-util/: Cargo.toml
vitasdk-sys/build-util/src/: link_visitor.rs  main.rs  vita_headers_db.rs
vitasdk-sys/src/: lib.rs
vitasdk/examples/: ferris_gif.rs
vitasdk/src/: display.rs  dmac.rs  error.rs  http.rs  lib.rs  net.rs  sysmem.rs  sysmodule.rs  types.rs
