[package]
name = "cargo-vitasdk"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cargo-vitasdk"
required-features = ["executable"]

[dependencies]
camino = "1.0.8"
cargo_metadata = "0.13.1"
color-eyre = { version = "0.6.1", optional = true }
eyre = "0.6.8"
futures = { version = "0.3.21", default-features = false, features = ["std"] }
once_cell = "1.10.0"
serde_json = "1.0.81"
tokio = { version = "1.18.5", features = ["process", "io-util", "tracing", "macros", "fs"] }
tracing = "0.1.34"
tracing-error = { version = "0.2.0", optional = true }
tracing-subscriber = { version = "0.3.11", optional = true, features = ["env-filter"] }

[features]
default = ["executable"]
executable = ["tokio/rt", "color-eyre", "tracing-subscriber", "tracing-error"]
