[package]
name = "cargo-vitasdk"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cargo-vitasdk"
required-features = ["executable"]

[dependencies]
camino = "1.1.6"
cargo_metadata = "0.13.1"
color-eyre = { version = "0.6.2", optional = true }
eyre = "0.6.8"
futures = { version = "0.3.28", default-features = false, features = ["std"] }
once_cell = "1.18.0"
serde_json = "1.0.106"
tokio = { version = "1.32.0", features = ["process", "io-util", "tracing", "macros", "fs"] }
tracing = "0.1.37"
tracing-error = { version = "0.2.0", optional = true }
tracing-subscriber = { version = "0.3.17", optional = true, features = ["env-filter"] }

[features]
default = ["executable"]
executable = ["tokio/rt", "color-eyre", "tracing-subscriber", "tracing-error"]
