[package]
name = "vitasdk-sys"
version = "0.0.0"
edition = "2021"

[build-dependencies]
bindgen = "0.68.1"
build-util = { path = "build-util", features = ["link-visitor"] }
camino = "1.1.6"
color-eyre = "0.6.2"
env_logger = "0.10.0"
eyre = "0.6.8"
log = "0.4.20"
quote = { version = "1.0.33", default-features = false }
regex = { version = "1.9.5", default-features = false, features = ["std", "perf"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
