[package]
name = "vitasdk"
version = "0.2.125"
edition = "2021"

[build-dependencies]
bindgen = "0.59.2"
camino = "1.0.7"
proc-macro2 = { version = "1.0.38", default-features = false }
quote = { version = "1.0.18", default-features = false }
syn = { version = "1.0.93", default-features = false, features = ["parsing", "full", "printing", "visit-mut"] }
